* some more twitter links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,13 @@
           <a href="//github.com/pdis/web-jekyll" target="_blank"> <i class="fa fa-3x fa-github"></i> </a>
           <a href="//www.facebook.com/shu.w.zhengwei" target="_blank"> <i class="fa fa-3x fa-facebook-square"></i> </a>
           <a href="//twitter.com/TaiwanPDIS" target="_blank"> <i class="fa fa-3x fa-twitter-square"></i> </a>
-          <a href="https://twitter.com/TaiwanTodayJP" target="_blank">  </a>
-          <a href="https://twitter.com/noticiastaiwan" target="_blank">  </a>
+          <br />
+          <a href="https://twitter.com/TaiwanTodayJP" target="_blank">🇯🇵</a>
+          <a href="https://twitter.com/taiwanheute" target="_blank">🇩🇪</a>
+          <a href="https://twitter.com/noticiastaiwan" target="_blank">🇪🇸</a>
+          <a href="https://twitter.com/taiwanreview1" target="_blank">🇬🇧</a>
+          <a href="https://twitter.com/trending_taiwan" target="_blank">🇺🇸</a>
+          <a href="https://twitter.com/SiteTaiwanInfo" target="_blank">🇫🇷</a>
         </div>
       </div>
       <div class="col l3 s12">
