--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,7 @@
           <a href="https://twitter.com/TaiwanTodayJP" target="_blank">🇯🇵</a>
           <a href="https://twitter.com/taiwanheute" target="_blank">🇩🇪</a>
           <a href="https://twitter.com/noticiastaiwan" target="_blank">🇪🇸</a>
+          <a href="https://twitter.com/taiwanhoy" target="_blank">🇪🇸</a>
           <a href="https://twitter.com/taiwanreview1" target="_blank">🇬🇧</a>
           <a href="https://twitter.com/trending_taiwan" target="_blank">🇺🇸</a>
           <a href="https://twitter.com/SiteTaiwanInfo" target="_blank">🇫🇷</a>
