update style of posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
         {{ content }}
       </div>
 
-      <div class="site">
+      <div class="cc">
         {% if page.cc %}
           {% t page.cc %}
         {% else page.cc %}
