--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,11 +18,7 @@ layout: default
             {{ page.date | date: date_format }}
           </time>
           <ul class="authors">
-            {% if site.is_fullwidth %}
-             {% assign authors_name = page.author | split: "、" %}
-            {% else %}
-             {% assign authors_name = page.author | split: ", " %}
-            {% endif %}
+            {% assign authors_name = page.author | replace: "、", ", " | split: ", " %}
             {% for author_name in authors_name %}
               {% assign author = site.data.authors[author_name] %}
               <li itemprop="author" itemscope itemtype="http://schema.org/Person">
