add links for features & change icons

--- a/_includes/navlist.html
+++ b/_includes/navlist.html
@@ -48,7 +48,7 @@
 
 <li>
   <div class="search-wrapper">
-    <input id="search" class="search-box" placeholder="Search" value="">
+    <input class="search-box" placeholder="Search" value="">
     <i class="material-icons search-button notranslate" onclick="search(this)">search</i>
     <div class="search-results"></div>
   </div>
