--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -36,7 +36,7 @@
 
     {% if page.url == '/' %}
     <div class='center section'>
-      <a href="{{'project' | relative_url }}" class="btn-large waves-effect waves-light cyan">
+      <a href="{{'project' | relative_url }}" class="btn waves-effect waves-light cyan">
         {% t site.more %}{% t site.project %}
         <i class="material-icons right notranslate">send</i>
       </a>
