--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -34,7 +34,7 @@
     <div class='section'>
     {% if page.url == '/' %}
       <div class="center">
-        <a href="{{'/blog'| relative_url }}" class="btn-large waves-effect waves-light cyan">
+        <a href="{{'/blog'| relative_url }}" class="btn waves-effect waves-light cyan">
           {% t site.more %}{% t site.blog %}
           <i class="material-icons right notranslate">send</i>
         </a>
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col s4 center">
           {% if page.prevUrl %}
-          <a href="{{ page.prevUrl | prepend: site.baseurl | replace: 'index.html', '' | replace: '.html', '/' }}" class="btn-large waves-effect waves-light cyan">prev</a>
+          <a href="{{ page.prevUrl | prepend: site.baseurl | replace: 'index.html', '' | replace: '.html', '/' }}" class="btn waves-effect waves-light cyan">prev</a>
           {% endif %}
         </div>
         <div class="col s4 center">
@@ -51,7 +51,7 @@
         </div>
         <div class="col s4 center">
           {% if page.nextUrl %}
-          <a href="{{ page.nextUrl | prepend: site.baseurl | replace: '.html', '/' }}" class="btn-large waves-effect waves-light cyan">next</a>
+          <a href="{{ page.nextUrl | prepend: site.baseurl | replace: '.html', '/' }}" class="btn waves-effect waves-light cyan">next</a>
           {% endif %}
         </div>
       </div>
