--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,15 +7,14 @@
       <div class="col l6 s12">
         <h5 class="{{ color }}">{% t about.title %}</h5>
         <p class="{{ color }}">{% t site.description %}</p>
-        <div class='about-logos' style="letter-spacing:1ch;">
+        <div class='about-logos section'>
           <a href="//pdis.nat.gov.tw"> <img alt="logo" class="circle hoverable" src="{{ site.logo }}" style="width:3rem;vertical-align:bottom;"> </a>
           <a href="//www.youtube.com/PdisTwGov" target="_blank"> <i class="fa fa-3x fa-youtube-play"></i> </a>
           <a href="//github.com/pdis/web-jekyll" target="_blank"> <i class="fa fa-3x fa-github"></i> </a>
           <a href="//www.facebook.com/shu.w.zhengwei" target="_blank"> <i class="fa fa-3x fa-facebook-square"></i> </a>
           <a href="//twitter.com/TaiwanPDIS" target="_blank"> <i class="fa fa-3x fa-twitter-square"></i> </a>
-          <br />
-          <br />
-          <br />
+        </div>
+        <div class="about-logos section">
           <a href="https://twitter.com/TaiwanTodayJP" target="_blank"> <span class="flag-icon flag-icon-jp"></span> </a>
           <a href="https://twitter.com/taiwanheute" target="_blank"> <span class="flag-icon flag-icon-de"></span> </a>
           <a href="https://twitter.com/noticiastaiwan" target="_blank"> <span class="flag-icon flag-icon-es"></span> </a>
