--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,10 +12,11 @@ layout: default
 
       <header class="post-header">
         <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-        <div class="post-meta">
+        <p class="post-desc">{{ page.excerpt | strip_html }}</p>
+        <div class="post-meta section">
+          <i class="material-icons tiny">event</i>
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-            {% assign date_format = site.minima.date_format | default: "%Y/%m/%d" %}
-            {{ page.date | date: date_format }}
+            {{ page.date | date: "%Y-%m-%d" }}
           </time>
           <ul class="authors">
             {% assign authors_name = page.author | replace: "、", ", " | split: ", " %}
