--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,29 +1,21 @@
 {% assign color = include.color | default: 'teal-text' %}
 
 <nav class="transparent z-depth-0" role="navigation">
-    <div class="nav-wrapper container">
-
-      <!-- Logo -->
-      <a id="logo-container" class="right brand-logo hoverable" style='line-height:0' href="{{ '/' | relative_url }}">
-        <img src="{{ site.logo }}" alt="logo" style="height: 64px;">
-      </a>
-      <!--  -->
-
-      <!-- Menu nav -->
-      <ul class="hide-on-med-and-down">
-        {% include navlist.html color=color %}
-      </ul>
-      <!--  -->
-
-      {% assign default_paths = site.pages | map: "path" %}
-      {% assign page_paths = site.header_pages | default: default_paths %}
-
-      <!-- Side nav and Hamburger menu -->
-      <ul id="nav-mobile" class="side-nav">
-        {% include navlist.html color=color %}
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse {{ color }}"><i class="material-icons">menu</i></a>
-      <!--  -->
-
-    </div>
+  <div class="nav-wrapper container">
+    <!-- button of sidenav -->
+    <a href="#" data-target="nav-mobile" class="sidenav-trigger {{ color }}"><i class="material-icons">menu</i></a>
+    <!-- Logo -->
+    <a id="logo-container" class="right brand-logo hoverable" style='line-height:0' href="{{ '/' | relative_url }}">
+      <img src="{{ site.logo }}" alt="logo" style="height: 64px;">
+    </a>
+    <!-- Menu nav -->
+    <ul class="hide-on-med-and-down">
+      {% include navlist.html color=color %}
+    </ul>
+  </div>
 </nav>
+
+<!-- Sidenav -->
+<ul id="nav-mobile" class="sidenav">
+  {% include navlist.html color=color %}
+</ul>
