--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -78,11 +78,11 @@ img {
 
 .post-image {
   margin: 1em 0 0 0;
-  height: 20rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 100%;
+  height: 30rem;
 }
 .post-header {
   text-align: center;
@@ -144,10 +144,11 @@ img {
 }
 
 .posts .collection .collection-item {
-  padding: 5em 1em;
   .title {
-    margin: 0 0 1rem 0;
-    font-size: 150%;
+    margin: 3rem auto;
+  }
+  .content {
+    margin: 2rem auto;
   }
   >* {
     text-shadow: black 0px 0px 5px;
@@ -155,13 +156,13 @@ img {
 }
 
 .projects .card .card-image {
-  height: 15rem;
+  height: 18rem;
 }
 
 .dim {
   transition: all .3s ease;
   background-blend-mode: multiply;
-  background-color: gray !important;
+  background-color: dimgrey !important;
   &:hover {
     background-color: white !important;
   }
