--- a/_includes/script.html
+++ b/_includes/script.html
@@ -9,5 +9,5 @@
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.3/js/swiper.min.js"></script>
 <script src="/js/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="/js/materialize.min.js"></script>
 <script src="/js/init.js"></script>
