--- a/_sass/materialize/materialize.scss
+++ b/_sass/materialize/materialize.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-// Mixins
-@import "components/mixins";
-@import "components/color";
+// Color
+@import "components/color-variables";
+@import "components/color-classes";
 
 // Variables;
 @import "components/variables";
@@ -16,7 +16,6 @@
 @import "components/icons-material-design";
 @import "components/grid";
 @import "components/navbar";
-@import "components/roboto";
 @import "components/typography";
 @import "components/transitions";
 @import "components/cards";
@@ -32,13 +31,11 @@
 @import "components/materialbox";
 @import "components/forms/forms";
 @import "components/table_of_contents";
-@import "components/sideNav";
+@import "components/sidenav";
 @import "components/preloader";
 @import "components/slider";
 @import "components/carousel";
 @import "components/tapTarget";
 @import "components/pulse";
-@import "components/swiper";
-@import "components/date_picker/default";
-@import "components/date_picker/default.date";
-@import "components/date_picker/default.time";
+@import "components/datepicker";
+@import "components/timepicker";
