--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
     
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.3/css/swiper.min.css">
-    <link rel="stylesheet" type="text/css" media="screen,projection" href="/assets/materialize.min.css">
+    <link rel="stylesheet" type="text/css" media="screen,projection" href="/assets/materialize.css">
     <link rel="stylesheet" type="text/css" media="screen,projection" href="/assets/main.css">
     <link rel="stylesheet" type="text/css" media="screen,projection" href="/fonts/material-design-icons/material-icons.css">
     {% feed_meta %}
