--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -124,6 +124,11 @@ img {
       height: auto;
     }
   }
+  blockquote {
+    padding-left: 0;
+    background-color: white;
+    box-shadow: grey 1px 3px 5px;
+  }
   hr {
     border: solid 1px gray;
     border-width: 1px 0 0 0;
