remove dependency of jQuery

--- a/_includes/navlist.html
+++ b/_includes/navlist.html
@@ -1,5 +1,5 @@
 <li>
-  <a href="/" class="grey-text text-darken-3">
+  <a href="{{'/' | relative_url}}" class="grey-text text-darken-3">
     <i class="material-icons notranslate">home</i>
   </a>
 </li>
