--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -224,7 +224,7 @@ img {
     }
     .n_tag {
       background: teal;
-      margin: 0 -1ch 0 0;
+      margin: 0 -1ch 0 1ch;
       display: inline-block;
       height: 100%;
       // position: absolute;
