add i18n to seo title for page layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,10 @@ footbgcolor: teal lighten-4
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
-  {% include head.html %}
+  <head>
+    {% seo %}
+    {% include head.html %}
+  </head>
 
   <body class="{{ layout.bg }}">
 
