--- a/_includes/navlist.html
+++ b/_includes/navlist.html
@@ -21,7 +21,6 @@
   </ul>
 </li>
 
-<!-- nested -->
 <li class='drop'>
   <a class='grey-text text-darken-3'>{% t site.what-we-do %}
     <span class="material-icons notranslate" style="vertical-align:middle">expand_more</span>
@@ -53,3 +52,10 @@
     window.location.href = "{{ 'search' | relative_url }}/?q=" + q;
   }
 </script>
+
+<li>
+  <a href="{{ page.url | prepend: '/zh-TW' }}"><span class="flag-icon flag-icon-tw flag-icon-squared"></span></a>
+</li>
+<li>
+  <a href="{{ page.url | prepend: '/en' }}"><span class="flag-icon flag-icon-us flag-icon-squared"></span></a>
+</li>
