add i18n to post in author's name_en

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,10 +20,11 @@ layout: default
           <ul class="authors">
             {% assign authors_name = page.author | replace: "、", ", " | split: ", " %}
             {% for author_name in authors_name %}
-              {% assign author = site.data.authors[author_name] %}
+              {% capture nametype %}name{% if site.lang != "zh-TW" %}_{{ site.lang }}{% endif %}{% endcapture %}
+              {% assign author = site.data.authors | where: nametype, author_name %}
               <li itemprop="author" itemscope itemtype="http://schema.org/Person">
-                <a href="{{ author.wiselike | default: '/contact' }}" target="_blank" itemprop="name" class='chip'>
-                  <img src="{{ author.avatar | default: site.logo }}" alt="author">
+                <a href="{{ author.first.wiselike | default: '/contact' }}" target="_blank" itemprop="name" class='chip'>
+                  <img src="{{ author.first.avatar | default: site.logo }}" alt="author">
                   {{ author_name }}
                 </a>
               </li>
