--- a/_includes/script.html
+++ b/_includes/script.html
@@ -9,5 +9,6 @@
   src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.3/js/swiper.min.js"></script>
+<script src="/js/colcade.js"></script>
 <script src="/js/materialize.min.js"></script>
 <script src="/js/init.js"></script>
