footer style change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,10 @@
         <p class="{{ color }}">{% t site.description %}</p>
         <div class='about-logos section'>
           <a href="//pdis.nat.gov.tw"> <img alt="logo" class="circle hoverable" src="{{ site.logo }}" style="width:56px;vertical-align:bottom;"> </a>
-          <a class="btn-floating btn-large waves-effect waves-circle cyan" href="//www.youtube.com/PdisTwGov" target="_blank"> <i class="fa fa-3x fa-youtube-play"></i> </a>
-          <a class="btn-floating btn-large waves-effect waves-circle cyan" href="//github.com/pdis/web-jekyll" target="_blank"> <i class="fa fa-3x fa-github"></i> </a>
-          <a class="btn-floating btn-large waves-effect waves-circle cyan" href="//www.facebook.com/shu.w.zhengwei" target="_blank"> <i class="fa fa-3x fa-facebook-square"></i> </a>
-          <a class="btn-floating btn-large waves-effect waves-circle cyan" href="//twitter.com/TaiwanPDIS" target="_blank"> <i class="fa fa-3x fa-twitter-square"></i> </a>
-          </div>
+          <a class="{{ color }} btn-floating btn-large waves-effect waves-circle cyan" href="//www.youtube.com/PdisTwGov" target="_blank"> <i class="red-text fa fa-3x fa-youtube-play"></i> </a>
+          <a class="{{ color }} btn-floating btn-large waves-effect waves-circle cyan" href="//github.com/pdis/web-jekyll" target="_blank"> <i class="black-text fa fa-3x fa-github"></i> </a>
+          <a class="{{ color }} btn-floating btn-large waves-effect waves-circle cyan" href="//twitter.com/TaiwanPDIS" target="_blank"> <i class="cyan-text fa fa-3x fa-twitter-square"></i> </a>
+        </div>
         <div class="about-logos section">
           <a href="https://twitter.com/TaiwanTodayJP" target="_blank"> <span class="flag-icon flag-icon-jp"></span> </a>
           <a href="https://twitter.com/taiwanheute" target="_blank"> <span class="flag-icon flag-icon-de"></span> </a>
