--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 ---
 bg: brown lighten-5
 headcolor: grey-text text-darken-3
-footcolor: grey-text text-darken-3
-footbgcolor: teal lighten-4
+footcolor: white-text
+footbgcolor: grey darken-3
 ---
 
 <!DOCTYPE html>
